[package]
name = "nwkcalc"
version = "0.1.0"
edition = "2021"
description = "Tool for calculating network configuration values"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.7", features = ["derive", "env"]}
regex = "1"
ipnetwork = "*"
